# DAS

./: CMakeLists.txt  CONFIGURE.md  INSTALL.md  README.md  TODO.txt  ciwsprod_install.sh
configure/: access_schema.json  config.json  schema.json
ddl/: benchmark.xml  config.json  dasInstance.xml  dasPointers.xml  das_ddl_prototype.xml  das_ddl_prototype2.xml  das_ddl_prototype3.xml  ddl.xsd  ddl_level1_types.xml  ddl_test_types.xml  schema.json
ddl/schemas/: benchmark.xml  dasPointers.xml
doc/: DAS.vpp  Doxyfile  DoxygenLayout.xml  manual.md
include/: DasObject.hpp  DasVector.hpp  aux_query.hpp  das_object.hpp  exceptions.hpp  optional.hpp  storage_engine.hpp  transaction.hpp
include/ddl/: column.hpp  image.hpp  info.hpp  types.hpp
include/interal/: db_bundle.hpp
include/internal/: array.hpp  column_buffer.hpp  column_buffer.ipp  column_config.hpp  daemon.hpp  das_io.hpp  database.ipp  database_config.hpp  db_bundle.hpp  db_bundle.ipp  image_buffer.hpp  image_buffer.ipp  log.hpp  qlvisitor.hpp  result.hpp  result_iterator.hpp  storage_engine.ipp  storage_engine_blob.hpp  storage_engine_raw.hpp  utility.hpp
include/internal/plf/: database.ipp  result.ipp  result_iterator.ipp
include/internal/tpl/: database.ipp
include/plf/: database.hpp  result.hpp  result_iterator.hpp
include/tpl/: Database.hpp  database.hpp  database.ipp  result.hpp  result_iterator.hpp  transaction.hpp
include/tpl/mysql/: Database.hpp
processor/: CIWSProcessor.cpp  CIWSProcessor.h
resources/: FindBlitz.cmake  FindMySQL.cmake  FindODB.cmake  FindODB_BOOST.cmake  FindODB_MYSQL.cmake  FindODB_PGSQL.cmake  FindPython.cmake  config_schema.json  das_essential.xml  ddl.xsd
src/cpp/: aux_query.hpp  column_buffer.cpp  das_io.cpp  database_config.cpp  db_bundle.cpp  ddl_DasObject.hpp  ddl_DdlObject.hpp  ddl_column.hpp  ddl_image.hpp  image_buffer.cpp  info.cpp  storage_engine.cpp  storage_engine_blob.cpp  storage_engine_raw.cpp  transaction.cpp
src/cpp/include/: column_buffer.ipp  storage_engine_raw.hpp
src/cpp/ql/: qlvisitor.cpp  qlvisitor.hpp
src/cpp/ql/bnfc/: Absyn.C  Absyn.H  Lexer.C  Parser.C  Parser.H  grammar.cf  grammar.l  grammar.y
src/cpp/tpl/: db_bundle.cpp  storage_engine.cpp  transaction.cpp
src/examples/: associations_example.cpp  ciws_example.cpp  column_example.cpp  data_example.cpp  persistence_example.cpp  query_example.cpp
src/python/: _blob_interface.py  _file_interface.py  association_many_exclusive.py  association_many_shared.py  association_one_exclusive.py  association_one_shared.py  cache_check.py  config_validator.py  configure.py  db_access.py  ddl.py  introspection.py  jsonschema.py  mysql_ddl_splitter.py  odb.py  swig.py
src/swig/: das_object.i  das_optional.i  data_array.cpp  data_array.hpp  database.i  ddl_info.i  ddl_types.i  pydas.i  range.i  result.i  result_iterator_wrapper.hpp  transaction.i
src/test/: Makefile  Makefile~  array_column_test.cpp  association_test.cpp  data_test.cpp  ddl_instance-odb.cxx  ddl_instance-odb.hxx  ddl_instance-odb.ixx  ddl_instance.cxx  ddl_instance.cxx~  ddl_instance.hxx  ddl_instance.hxx~  ddl_instance.sql  ddl_instance.sql~  driver.cxx  driver.cxx~  main.cpp  metadata_test.cpp  rollback_test.cpp  scratch.cpp  test_odb  unit_association.cpp  unit_column.cpp  unit_column_array.cpp  unit_column_array_blob.cpp  unit_column_blob.cpp  unit_image.cpp  unit_image_blob.cpp  unit_main.cpp  unit_metadata.cpp  unit_query.cpp  unit_tpl_all.hpp
